methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:53: error: reassignment to val
  n= n+1
   ^